# initial information
AC_INIT([metachain], [0.1], [office@trustchaintechnologies.io])

# check for the source directory
AC_CONFIG_SRCDIR([src/header/defines.h])

# automake initialization version >= 1.9
AM_INIT_AUTOMAKE([1.9])

# check for C++ preprocessor and compiler
AC_PROG_CXXCPP
AC_PROG_CXX

# use C++ compiler checks
AC_LANG([C++])

# header checks
AC_HEADER_STDC
AC_CHECK_HEADERS([string])
AC_CHECK_HEADERS([iostream])

# checks for typedefs, structures and compiler charactaristics
AC_TYPE_SIZE_T

# final files
AC_CONFIG_FILES([Makefile])

# end
AC_OUTPUT
